add AppProperties done